--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "pg": "^6.2.4"
   },
   "devDependencies": {
-    "body-parser": "^1.17.2",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "nodemon": "^1.11.0",
-    "pg": "^6.2.4"
+    "nodemon": "^1.11.0"
   }
 }
